feat: add logout docs
